feat: implement get/post endpoints of tags service
